--- a/src/theme/_signup.scss
+++ b/src/theme/_signup.scss
@@ -1,32 +1,33 @@
-.checkbox{
+.checkbox {
   margin-top: -4%;
   margin-right: 0;
   margin-bottom: 2%;
 }
 
-.siu{
-margin: 10% 0 8% 0;
+.siu {
+  margin: 10% 0 8% 0;
 }
 
-ion-checkbox{
-  margin-right: 5vw;
-  margin-left: 0;
-}
-
-
-  .input-style{
-   --padding-start: 0;
-    --highlight-height: 5px;
+.input-style {
+  --highlight-height: 5px;
   --heighlight-width: 100%;
   --highlight-color: primary;
-  }
+  --background: #fbfafa;
 
-  ion-input{
-    margin-left: 3vw;
-  }
+  border: 1.5px solid rgba(0, 0, 0, 0.1);
+  --box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 2.5vh;
+  margin-bottom: 2vh;
+  justify-content: center;
+}
 
-.signup-grid{
-  display:flex;
+ion-input {
+  margin-left: 3vw;
+}
+
+.signup-grid {
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: fit-content;
@@ -34,14 +35,15 @@ ion-checkbox{
   padding-top: 5vh;
 }
 
-.only-email{
+.only-email {
   font-size: 2.5vh;
   float: left;
 }
 
-.sc-md-h-ion-label, .item-input{
+.sc-md-h-ion-label,
+.item-input {
   max-width: 100%;
-  font-size: 1.15em; 
+  font-size: 1.15em;
 }
 
 .message {
@@ -56,54 +58,38 @@ ion-checkbox{
   margin-top: 1.5vh;
 }
 
-.message p{
+.message p {
   margin-top: 1vh;
   margin-bottom: 0.7vh;
 }
 
-.return-button{
+.return-button {
   --border-radius: 10px;
   font-size: 2.4vh;
 }
 
 .yellow-banner {
   background: #ffe552;
-  top:4%;
+  top: 4%;
   padding-top: 5vh;
   padding-bottom: 5vh;
   z-index: 10;
   margin-bottom: 3vh;
 }
 
-.sign-up-newsletter{
-  font-size: 5.3vw;
-}
-
-.newsletter{
+.newsletter {
   margin-top: -4vh;
 }
 
-.yb-holder{
+.yb-holder {
   width: 100%;
   margin: 0;
 }
 
-.sc-md-h-ion-label, .item-input{
+.sc-md-h-ion-label,
+.item-input {
   max-width: 100%;
-  font-size: 1.15em; 
-}
-
-.input-style {
-  --background: #FBFAFA;
-  // --highlight-height: 5px;
-  // --heighlight-width: 100%;
-  // --highlight-color: primary;
-  border: 1.5px solid rgba(0, 0, 0, 0.10);
-  --box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 2.5vh; 
-  margin-bottom: 2vh;
-  justify-content: center;
+  font-size: 1.15em;
 }
 
 .sign-up {
@@ -115,77 +101,66 @@ ion-checkbox{
   justify-content: space-evenly;
 }
 
-.return{
+.return {
   margin-bottom: 5%;
 }
 
-.sign-up-button{
+.sign-up-button {
   --background: #228ad3;
   --background-hover: #95d0fa;
   --border-radius: 10px;
-  font-size: 2.65vh;
   --box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   text-transform: uppercase !important;
   letter-spacing: 2px;
-  width: 70%;
 }
 
-.su-buttons-holder{
+.su-buttons-holder {
   margin-bottom: 3%;
   margin-top: 1.5vh;
 }
 
-.inputs{
-  display:flex;
+.inputs {
+  display: flex;
   justify-content: space-between;
   flex-direction: column;
-  padding:0 5% 0 5%;
+  padding: 0 5% 0 5%;
   top: 30%;
 }
 
-@media screen and (min-width: 700px) and (min-height: 790px){
+@media screen and (min-width: 700px) and (min-height: 790px) {
   .message p {
     font-size: 1.7vh;
     padding: 0 15% 0 15%;
   }
 
-  .sign-up-newsletter{
-    font-size: 2.3vh;
-  }
-
-  .checkbox{
+  .checkbox {
     margin-top: -2%;
   }
-  
-  .title{
+
+  .title {
     font-size: 5vw;
   }
 
-  .inputs{
+  .inputs {
     padding-left: 9%;
     padding-right: 9%;
   }
-  
-  .sign-up-button{
-    width: 50%;
-  }
 
-  .input-style{
+  .input-style {
     font-size: 2.2vh;
   }
-
 }
 
-@media(min-width: 567px) and (max-height: 790px){
-  .checkbox{
+@media (min-width: 567px) and (max-height: 790px) {
+  .checkbox {
     margin-top: -4vh;
   }
 
-  .message{
+  .message {
     padding: 1% 7% 3% 7%;
   }
 
-  .message p{
+  .message p {
     margin-top: 0;
     font-size: 1.8vw;
     line-height: 2.3vw;
@@ -194,34 +169,30 @@ ion-checkbox{
     color: rgba(0, 0, 0, 0.7);
     padding: 1%;
   }
- 
-  h1.title.su{
-    font-size: 3vh;
-  } 
 
-  .yb-holder{
+  h1.title.su {
+    font-size: 3vh;
+  }
+
+  .yb-holder {
     margin-top: 3vw;
   }
 
-  .blue-button,.return-button{
+  .blue-button,
+  .return-button {
     font-size: 1.9vw;
   }
 
-  .sign-up-button{
-    font-size: 2.3vw;
-    width: 40%;
-  }
-
-  .return-button{
+  .return-button {
     --border-radius: 10px;
   }
 
-  .only-email{
+  .only-email {
     font-size: 2.5vh;
     padding: 0 5% 0 5%;
   }
 
-  .signup-grid{
+  .signup-grid {
     padding: 5%;
     padding-top: 0;
     justify-content: center;
@@ -234,95 +205,74 @@ ion-checkbox{
     width: 70%;
   }
 
-  .sc-md-h-ion-label, .item-input{
+  .sc-md-h-ion-label,
+  .item-input {
     height: 40%;
   }
 
-  .input-style{
+  .input-style {
     height: fit-content;
     font-size: 3vh;
   }
 
-  ion-input{
+  ion-input {
     height: 3vh;
     padding-top: 2%;
   }
- 
-  h1.title.su{
+
+  h1.title.su {
     font-size: 3vw;
-  } 
-
-  ion-checkbox{
-    margin-right: 5vh;
-    margin-left: 0;
   }
 
-  .sign-up-newsletter{
-    font-size: 3.5vh;
-  }
-
-  .su-buttons-holder{
+  .su-buttons-holder {
     margin-bottom: 0;
   }
-
-
 }
 
-@media screen and (min-width: 900px) and (max-height: 1035px){
-
-  .signup-grid{
+@media screen and (min-width: 900px) and (max-height: 1035px) {
+  .signup-grid {
     padding: 0 25% 0 25%;
   }
-  
-  .siu{
-  margin: 0;
+
+  .siu {
+    margin: 0;
   }
 
-  .inputs{
+  .inputs {
     padding: 0 8% 0 8%;
   }
 
-  .checkbox{
+  .checkbox {
     margin-top: -1.5vh;
   }
 
-  h1.title.su{
+  h1.title.su {
     font-size: 3vw;
   }
-  
-  .message p{
+
+  .message p {
     font-size: 2vh;
     color: rgba(0, 0, 0, 0.7);
   }
 
-  .sign-up-newsletter{
+  .sign-up-button {
     font-size: 3vh;
   }
 
-  .sign-up-button{
-    font-size: 3vh;
-  }
-
-  .return-button{
+  .return-button {
     font-size: 2.8vh;
   }
 }
 
-@media (max-width: 1030px) and (min-height: 935px){
-
-  .message p{
+@media (max-width: 1030px) and (min-height: 935px) {
+  .message p {
     font-size: 1.7vh;
     color: rgba(0, 0, 0, 0.7);
     padding-left: 10%;
     padding-right: 10%;
   }
 
-  .sign-up-button{
-    font-size: 2.3vh;
-    width: 40%;
-  }
-
-  .return-button{
+  .return-button {
     font-size: 2vh;
   }
 }
